cargo-features = ["edition2024"]

[package]
name = "rusty-kv"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "map_rusty_bench"
harness = false

[dependencies]
linked_hash_set = "0.1.5"
tempfile = "3.23.0"

[workspace.metadata.marker.lints]
marker_lints = { git = "https://github.com/rust-marker/marker" }
